--- a/src/main/resources/templates/indexAddScooter.html
+++ b/src/main/resources/templates/indexAddScooter.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<p id="hello-text">Dodales  hulajnoge xd</p>
+<p id="hello-text">Dodales  hulajnoge </p>
 
 </body>
 </html>
