--- a/src/main/resources/templates/indexRemoveScooterId.html
+++ b/src/main/resources/templates/indexRemoveScooterId.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<p id="hello-text">Dodales  hulajnoge </p>
-
+<p id="hello-text">Usunołes   hulajnoge </p>
+<a href="/allScooter" class="button">Pełna lista hulajnog</a><br><br>
 </body>
 </html>
